# fetwoma

./: .project  LICENSE  README.md  feedmailer.cabal  fetwoma.cabal
src/: FeedDataStore.hs  Main.hs
