name:           feedmailer
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Andreas Pakulat <apaku@gmx.de>
maintainer:     Andreas Pakulat <apaku@gmx.de>
description:    Emails feed entries
copyright:      Andreas Pakulat <apaku@gmx.de>
license:        BSD3
license-file:   LICENSE

executable feedmailer
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   download-curl,
                   feed,
                   mime-mail
  ghc-options:     -Wall

